--- a/week9/final-project-proposal/api.html
+++ b/week9/final-project-proposal/api.html
@@ -13,7 +13,7 @@
       name="description"
       content="Site plan for weather website community"
     />
-    <script src="js/characterapi.js" defer></script>
+    <script src="characterapi.js" defer></script>
     <link type="text/css" rel="stylesheet" href="css/small.css" />
     <link type="text/css" rel="stylesheet" href="css/medium.css" />
     <link type="text/css" rel="stylesheet" href="css/large.css" />
