--- a/week9/javascript30-drums/index-START.html
+++ b/week9/javascript30-drums/index-START.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <title>JS Drum Kit</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="drumstyle.css" />
+    <!-- <script src="drums.js" defer></script> -->
     <script src="teamassignment.js" defer></script>
   </head>
   <body>
     <div class="keys">
+      <img src="images/stage.jpg" alt="" />
       <div data-key="65" class="key">
         <kbd>A</kbd>
         <span class="sound">clap</span>
