--- a/disneylinebuddy/main.html
+++ b/disneylinebuddy/main.html
@@ -1,42 +1,56 @@
 <!DOCTYPE html>
 <html lang="en-US">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Ashley Zufelt" />
+    <link type="normalize/css" rel="stylesheet" href="#" />
+    <link type="text/css" rel="stylesheet" href="css/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link
+      rel="stylesheet"
+      media="screen"
+      href="https://fontlibrary.org//face/waltograph"
+      type="text/css"
+    />
+    <script src="js/script.js" defer></script>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="author" content="Ashley Zufelt" />
-  <link type="normalize/css" rel="stylesheet" href="#" />
-  <link type="text/css" rel="stylesheet" href="css/main.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/waltograph" type="text/css" />
-  <script src="js/script.js" defer></script>
+    <link rel="shortcut icon" href="../favicon.ico" />
+    <title>Disney Line App</title>
+  </head>
 
-  <link rel="shortcut icon" href="../favicon.ico" />
-  <title>Disney Line App</title>
-</head>
+  <body>
+    <header>
+      <h1>Hello <span class="nameDisplay"></span></h1>
+      <a href="/main.html"><img src="" alt="mickey mouse balloon" /></a>
+    </header>
+    <main class="">
+      <header>
+        <h1>Welcome <span class="visitorName"></span>!</h1>
+        <div class="navBox">
+          <nav>
+            <a href="main.html"
+              ><img
+                class="navBalloon hide"
+                src="images/single-balloon.svg"
+                alt="mickey balloon"
+            /></a>
+          </nav>
+        </div>
+      </header>
 
-<body>
-  <header>
-        <h1>Hello <span class="nameDisplay"></span></h1>
-        <a href="/main.html"><img src="" alt="mickey mouse balloon"></a>
-  </header>
-  <main>
-    <div>
-      
-  </main>
-  <footer>&copy;<span id="currentyear"></span> | Ashley Zufelt</footer>
-  </div>
+      <div>This is where all the stuff goes!</div>
+    </main>
 
-
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-  <script>
-    WebFont.load({
-      google: {
-        families: ["Open Sans"],
-      },
-    });
-  </script>
-</body>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+    <script>
+      WebFont.load({
+        google: {
+          families: ["Open Sans"],
+        },
+      });
+    </script>
+    <script src="js/script.js" defer></script>
+  </body>
 </html>
