name field in own function, displays on next screen

--- a/disneylinebuddy/index.html
+++ b/disneylinebuddy/index.html
@@ -19862,7 +19862,7 @@
     </nav>
     <main class="WelcomePage hide">
       <header>
-        <h1>Welcome <span class="visitorName"></span>!</h1>
+        <h1>Welcome <span class="nameTitle"></span>!</h1>
         <div class="navBox">
           <!-- <nav>
         <a href="main.html"
