--- a/disneylinebuddy/index.html
+++ b/disneylinebuddy/index.html
@@ -19875,7 +19875,10 @@
         </div>
       </header>
 
-      <div>This is where all the stuff goes!</div>
+      <div>
+        <h2>This is where all the stuff goes!</h2>
+        <img src="images/mickey-sketchBW.png" alt="sketched mickey mouse" />
+      </div>
     </main>
     <footer>&copy;<span id="currentyear"></span> | Ashley Zufelt</footer>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
