--- a/week10/index.html
+++ b/week10/index.html
@@ -117,8 +117,11 @@
           The notes were kind of "boring" this week... because, I already know a
           lot about input validation in html and in javascript, along with
           patterns and such. Since I read about them this week, I worked on
-          making my final project require the user put in information. I'll also
-          include some input fields that I have coded here: Enjoy!
+          making my final project require the user input information. Which you
+          can check out the start of said project and input validation
+          <a href="/disneylinebuddy/index.html">HERE</a> It's all starting to
+          come togeether! I'll also include some input fields that I have coded
+          here: Enjoy!
         </p>
         <div>
           <fieldset>
