fixed link, changed js modules, storeName() won't work in enter screen script file for some reason.

--- a/disneylinebuddy/index.html
+++ b/disneylinebuddy/index.html
@@ -21,14 +21,15 @@
   </head>
 
   <body>
-    <div>
+    <div class="enterPageWrapper">
       <div class="enterPage enterStuckatTop">
         <div class="">
           <svg
             id="Layer_1"
             data-name="Layer 1"
             xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 1078.53 3231.71"
+            viewBox="1.5 4 1000 3231.71"
+            preserveAspectRatio="xMidYMid meet"
           >
             <defs>
               <style>
@@ -19889,6 +19890,6 @@
         },
       });
     </script>
-    <script src="js/script.js" defer></script>
+    <script src="js/script.mjs" type="module" defer></script>
   </body>
 </html>
