--- a/week10/index.html
+++ b/week10/index.html
@@ -119,9 +119,11 @@
           patterns and such. Since I read about them this week, I worked on
           making my final project require the user input information. Which you
           can check out the start of said project and input validation
-          <a href="/disneylinebuddy/index.html">HERE</a> It's all starting to
-          come togeether! I'll also include some input fields that I have coded
-          here: Enjoy!
+          <a href="https://azufelt.github.io/wdd330/disneylinebuddy/index.html"
+            >HERE</a
+          >
+          It's all starting to come togeether! I'll also include some input
+          fields that I have coded here: Enjoy!
         </p>
         <div>
           <fieldset>
