--- a/week14-final/index.html
+++ b/week14-final/index.html
@@ -21,8 +21,8 @@
     />
     <link type="text/css" rel="stylesheet" href="css/main.css" /> -->
     <!-- <script src="js/script.js" defer></script> -->
-    <script src="js/characterapi.js" defer></script>
-    <script src="js/recipe.js" defer></script>
+    <script src="js/CharacterListApi.js" defer></script>
+    <!-- <script src="js/recipe.js" defer></script> -->
     <!-- Import axios library -->
     <!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script> -->
     <!-- Querystring library -->
