.filter() array "works" But somewhere inside the filtering of the bigList it breaks and returns duplicate object values.

--- a/week14-final/index.html
+++ b/week14-final/index.html
@@ -47,7 +47,7 @@
           class="characterValue"
           name="character"
         /><br /><br />
-        <input type="submit" class="characterSearch" value="Search" />
+        <input type="button" class="characterSearch" value="Search" />
       </form>
       <div class="characterBio">
         <ul class="returnresults"></ul>
