--- a/disneylinebuddy/main.html
+++ b/disneylinebuddy/main.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Ashley Zufelt" />
     <link type="normalize/css" rel="stylesheet" href="#" />
-    <link type="text/css" rel="stylesheet" href="css/style.css" />
+    <link type="text/css" rel="stylesheet" href="css/style.css?v=2" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
       rel="stylesheet"
@@ -22,7 +22,12 @@
   <body>
     <header>
       <h1>Welcome <span class="nameTitle"></span>!</h1>
-      <a href="main.html"><img src="" alt="mickey mouse balloon" /></a>
+      <a href="main.html"
+        ><img
+          src="images/single-balloon.svg"
+          alt="mickey mouse balloon"
+          class="navBalloon"
+      /></a>
     </header>
     <main class="mainPage">
       <div class="navTileBox">
