--- a/disneylinebuddy/index.html
+++ b/disneylinebuddy/index.html
@@ -17,7 +17,7 @@
     <!-- <script src="js/script.js" defer></script> -->
 
     <link rel="shortcut icon" href="../favicon.ico" />
-    <title>Disney Line App</title>
+    <title>Disney Line Buddy</title>
   </head>
 
   <body>
