--- a/disneylinebuddy/main.html
+++ b/disneylinebuddy/main.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Ashley Zufelt" />
     <link type="normalize/css" rel="stylesheet" href="#" />
-    <link type="text/css" rel="stylesheet" href="css/style.css?v=2" />
+    <link type="text/css" rel="stylesheet" href="css/mainpage.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
       rel="stylesheet"
@@ -16,7 +16,7 @@
     />
 
     <link rel="shortcut icon" href="../favicon.ico" />
-    <title>Disney Line App</title>
+    <title>Disney Line Buddy</title>
   </head>
 
   <body>
@@ -31,6 +31,7 @@
     </header>
     <main class="mainPage">
       <div class="navTileBox">
+        <ul class="tileList"></ul>
         <!-- <div class="NavTile">
           <h3>Park Weather</h3>
         </div> -->
