--- a/disneylinebuddy/trivia.html
+++ b/disneylinebuddy/trivia.html
@@ -45,7 +45,7 @@
           <div class="triviaCardBack largeTile"></div>
         </div>
       </div> -->
-      <div class="trivia-card">
+      <div class="trivia-card largeTile">
         <div class="trivia-card-inner">
           <div class="trivia-card-front blue card" data-key="">
             <h2>Trivia</h2>
