weather with icon is working

--- a/disneylinebuddy/weather.html
+++ b/disneylinebuddy/weather.html
@@ -59,9 +59,9 @@
           <p>
             Currently: <span id="conditions"></span><br />
             Current Temp: <span id="currentTemp"></span>°F<br />
-            Wind Chill: <span id="windchill"></span><br />
+            icon: <span id="windchill"></span><br />
             Humidity: <span id="humidity"></span><br />
-            Wind Speed: <span id="wind"></span>mph<br />
+            Wind: <span id="wind"></span>mph<br />
           </p>
         </div>
       </div>
