Weather works. gets local park time. display shows when different select is chosen.

--- a/disneylinebuddy/weather.html
+++ b/disneylinebuddy/weather.html
@@ -45,6 +45,7 @@
         <label for="parks"></label>
 
         <select name="parkList" id="parkList" class="parkList">
+          <option class="park">Select a Park</option>
           <option value="california" class="park">Disneyland California</option>
           <option value="florida" class="park">
             Walt Disney World Florida
@@ -55,13 +56,7 @@
           <option value="shanghai" class="park">Disney Shanghai</option>
         </select>
         <div class="weatherResults">
-          <h3>Current Weather</h3>
-          <p>
-            Currently: <span id="conditions"></span><br />
-            Current Temp: <span id="currentTemp"></span>°F<br />
-            icon: <span id="windchill"></span><br />
-            Humidity: <span id="humidity"></span><br />
-            Wind: <span id="wind"></span>mph<br />
+          
           </p>
         </div>
       </div>
