trivia card, reverted back to flipping card with no logic.

--- a/disneylinebuddy/trivia.html
+++ b/disneylinebuddy/trivia.html
@@ -39,32 +39,19 @@
         alt="newspaper mickey"
         class="backgroundimg"
       />
-      <!-- <div class="cardContainer">
-        <div class="triviaCard">
-          <div class="triviaCardFront largeTile"></div>
-          <div class="triviaCardBack largeTile"></div>
-        </div>
-      </div> -->
-      <div class="trivia-card largeTile">
-        <div class="trivia-card-inner">
-          <div class="trivia-card-front blue card" data-key="">
-            <h2>Trivia</h2>
-            <p>Let's play! Tap the card to start.</p>
-          </div>
-          <div class="trivia-card-back yellow card" data-key="">
-            <h2></h2>
+      <div class="cardWrapper">
+        <div class="trivia-card">
+          <div class="trivia-card-inner">
+            <div class="trivia-card-front blue card" data-key="">
+              <h2>Trivia</h2>
+              <p>Let's play! Tap the card to start.</p>
+            </div>
+            <div class="trivia-card-back yellow card" data-key="">
+              <h2></h2>
+            </div>
           </div>
         </div>
       </div>
-      <!-- 
-      <div class="outerWrapper">
-        <div class="cardContainer">
-          <div class="triviaCard">
-            <div class="triviaCardFront largeTile blue"></div>
-            <div class="triviaCardBack largeTile yellow"></div>
-          </div>
-        </div>
-      </div> -->
     </main>
 
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
