--- a/disneylinebuddy/trivia.html
+++ b/disneylinebuddy/trivia.html
@@ -42,11 +42,11 @@
       <div class="cardWrapper">
         <div class="trivia-card">
           <div class="trivia-card-inner">
-            <div class="trivia-card-front blue card" data-key="">
+            <div class="trivia-card-front" data-key="">
               <h2>Trivia</h2>
               <p>Let's play! Tap the card to start.</p>
             </div>
-            <div class="trivia-card-back yellow card" data-key="">
+            <div class="trivia-card-back" data-key="">
               <h2></h2>
             </div>
           </div>
