max-width largee view

--- a/disneylinebuddy/main.html
+++ b/disneylinebuddy/main.html
@@ -36,6 +36,7 @@
           <h3>Park Weather</h3>
         </div> -->
       </div>
+      <div class="colorWrapper"></div>
       <img src="images/mickey-sketchBW.png" alt="sketched mickey mouse" />
     </main>
 
